// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LanguageToggle /> { locale: "ar" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      <span
        dir="ltr"
      >
        Read in:
      </span>
    </strong>
    <ul>
      <li>
        <a
          class="primary"
          href="/"
        >
          <span
            dir="ltr"
          >
            English
          </span>
        </a>
      </li>
      <li>
        <a
          class="primary"
          href="/"
        >
          <span
            dir="ltr"
          >
            Français
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<LanguageToggle /> { locale: "en" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      Read in:
    </strong>
    <ul>
      <li>
        <a
          class="primary"
          href="/"
        >
          Français
        </a>
      </li>
      <li>
        <a
          class="primary"
          href="/"
        >
          <span
            dir="rtl"
          >
            العربية
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<LanguageToggle /> { locale: "fr" } renders 1`] = `
<div>
  <div
    class="container"
    dir="ltr"
  >
    <strong>
      Read in:
    </strong>
    <ul>
      <li>
        <a
          class="primary"
          href="/"
        >
          English
        </a>
      </li>
      <li>
        <a
          class="primary"
          href="/"
        >
          <span
            dir="rtl"
          >
            العربية
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
